@@ -37,6 +37,7 @@ export(binomtestGC)
 export(chisq.testGC)
 export(chisqtestGC)
 export(colPerc)
+export(expCounts)
 export(lmGC)
 export(pbinomGC)
 export(pchisqGC)
